--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <main class="main">
-    <div class="cell-1 block">
+    <div class="cell-logo-contacts block">
       <h1 class="block__text block__text--title">company culture</h1>
       <ul class="contacts">
         <li class="contacts__item"> <a href="#0" class="contacts__link contacts__link--instagram"
@@ -20,50 +20,50 @@
             aria-label="Написать письмо компании"></a></li>
       </ul>
     </div>
-    <div class="cell-2 block">
+    <div class="cell-foto-main block">
       <picture>
         <source srcset="/src/img/2-1x.jpg 1x, /src/img/2-2x.jpg 2x, /src/img/2-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/2-1x.webp 1x, /src/img/2-2x.webp 2x, /src/img/2-3x.webp 3x" type="image/webp">
         <img class="block__picture" src="/src/img/2-1x.jpg" alt="Изображение девушки в шляпе" loading="lazy" />
       </picture>
     </div>
-    <div class="cell-3 block">
+    <div class="cell-foto-3 block">
       <picture>
         <source srcset="/src/img/3-1x.jpg 1x, /src/img/3-2x.jpg 2x, /src/img/3-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/3-1x.webp 1x, /src/img/3-2x.webp 2x, /src/img/3-3x.webp 3x" type="image/webp">
         <img class="block__picture" src="/src/img/3-1x.jpg" alt="Изображение смеющейся девушки" loading="lazy" />
       </picture>
     </div>
-    <div class="cell-4 block ">
+    <div class="cell-foto-4 block ">
       <picture>
         <source srcset="/src/img/4-1x.jpg 1x, /src/img/4-2x.jpg 2x, /src/img/4-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/4-1x.webp 1x, /src/img/4-2x.webp 2x, /src/img/4-3x.webp 3x" type="image/webp">
         <img class="block__picture" src="/src/img/4-1x.jpg" alt="Изображение девушки с цветами" loading="lazy" />
       </picture>
     </div>
-    <div class="cell-5 block ">
+    <div class="cell-foto-5 block ">
       <picture>
         <source srcset="/src/img/5-1x.jpg 1x, /src/img/5-2x.jpg 2x, /src/img/5-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/5-1x.webp 1x, /src/img/5-2x.webp 2x, /src/img/5-3x.webp 3x" type="image/webp">
         <img class="block__picture" src="/src/img/5-1x.jpg" alt="Изображение отрытой двери" loading="lazy" />
       </picture>
     </div>
-    <div class="cell-6 block block--red"></div>
-    <div class="cell-7 block block--grey">
+    <div class="cell-color-6 block block--red"></div>
+    <div class="cell-slogan block block--grey">
       <span class="block__text block__text--slogan">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa ultricies aliquam egestas amet mi aliquam. Eu,
         vel massa elementum nulla.
       </span>
     </div>
-    <div class="cell-8 block ">
+    <div class="cell-foto-8 block ">
       <picture>
         <source srcset="/src/img/8-1x.jpg 1x, /src/img/8-2x.jpg 2x, /src/img/8-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/8-1x.webp 1x, /src/img/8-2x.webp 2x, /src/img/8-3x.webp 3x" type="image/webp">
         <img class="block__picture" src="/src/img/8-1x.jpg" alt="Изображение кружки с кофе" loading="lazy" />
       </picture>
     </div>
-    <div class="cell-9 block block--brown"></div>
-    <div class="cell-10 block ">
+    <div class="cell-color-9 block block--brown"></div>
+    <div class="cell-foto-10 block ">
       <picture>
         <source srcset="/src/img/10-1x.jpg 1x, /src/img/10-2x.jpg 2x, /src/img/10-3x.jpg 3x" type="image/jpeg">
         <source srcset="/src/img/10-1x.webp 1x, /src/img/10-2x.webp 2x, /src/img/10-3x.webp 3x" type="image/webp">
